# clang-tool

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindClang.cmake  FindLLVM.cmake  FindLibClang.cmake
examples/: simple.cc
src/: CMakeLists.txt  main.cc
src/actions/: frontendaction.cc  frontendaction.h
src/consumer/: consumer.cc  consumer.h
src/finder/: finder.cc  finder.h  functioncallfinder.cc  functioncallfinder.h  integervariablefinder.cc  integervariablefinder.h
src/transformer/: functioncalltransformer.cc  functioncalltransformer.h  nattransformer.cc  nattransformer.h  transformer.cc  transformer.h
src/utils/: utils.cc  utils.h
src/worker/: functioncallworker.cc  functioncallworker.h  worker.cc  worker.h
